--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "knex": "^0.13.0",
     "morgan": "~1.8.1",
     "nodemon": "^1.11.0",
     "pg": "^6.2.4",
